--- a/my-coffee-venture/package.json
+++ b/my-coffee-venture/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ng-web-apis/common": "^1.9.0",
     "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.6.0",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "~0.1101.1",
     "@angular/cli": "~11.1.1",
     "@angular/compiler-cli": "~11.1.0",
+    "@angular/localize": "^11.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
